--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     // PyTorch Lite
     implementation "org.pytorch:pytorch_android_lite:1.9.0"
 
+    // Apache Commons Math
+    implementation "org.apache.commons:commons-math3:3.6.1"
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
