--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     // Apache Commons Math
     implementation "org.apache.commons:commons-math3:3.6.1"
 
+    // Deeply Audio Processing Library
+    implementation files('libs/librosa-release.aar')
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
