--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 
     // Apache Commons Math
     implementation "org.apache.commons:commons-math3:3.6.1"
+    implementation "org.apache.commons:commons-collections4:4.4"
 
     // Deeply Audio Processing Library
     implementation files('libs/librosa-release.aar')
